# sturdr

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  build.sh  channel.html  dependencies.sh  dsp.html  ephem.html  genindex.html  includeme.html  index.html  main.html  modules.html  nav.html  objects.inv  py-modindex.html  pyproject.toml  rcvr.html  search.html  searchindex.js  sturdr-config.cmake.in  utils.html
_sources/: dsp.rst.txt  includeme.rst.txt  index.rst.txt  modules.rst.txt  rcvr.rst.txt  utils.rst.txt
config/: gps_l1ca_rcvr.ini  gps_l1ca_rcvr.yaml
docs/: Makefile  channel.rst  conf.py  dsp.rst  ephem.rst  index.rst  nav.rst  utils.rst
include/sturdr/: acquisition.hpp  atmosphere.hpp  beamformer.hpp  beamsteer.hpp  channel-gps-l1ca-array.hpp  channel-gps-l1ca.hpp  channel.hpp  clock.hpp  concurrent-barrier.hpp  concurrent-queue.hpp  data-type-adapters.hpp  discriminator.hpp  ephemeris.hpp  estimation.hpp  fftw-wrapper.hpp  gnss-constants.hpp  gnss-signal.hpp  gps-l1ca-channel.hpp  gps-lnav.hpp  io-tools.hpp  lock-detectors.hpp  navigator.hpp  receiver.hpp  structs-enums.hpp  sturdr.hpp  tracking.hpp  vector-tracking.hpp
scripts/: run_sturdr.cpp
src/: acquisition.cpp  beamformer.cpp  beamsteer.cpp  channel-gps-l1ca-array.cpp  channel-gps-l1ca.cpp  clock.cpp  data-type-adapters.cpp  discriminator.cpp  ephemeris.cpp  estimation.cpp  fftw-wrapper.cpp  gnss-signal.cpp  gps-l1ca-channel.cpp  gps-lnav.cpp  io-tools.cpp  lock-detectors.cpp  navigator.cpp  receiver.cpp  structs-enums.cpp  sturdr-python.cpp  sturdr.cpp  tracking.cpp  vector-tracking.cpp
src/sturdr/: __init__.py  __init__.pyi
src/sturdr/_sturdr_core/: __init__.pyi  acquisition.pyi  beamsteer.pyi  discriminator.pyi  gnsssignal.pyi  lockdetectors.pyi  tracking.pyi
sturdr/: CMakeLists.txt  main.py  sturdr-config.cmake.in
sturdr/channel/: channel.py  gps_l1ca_channel.py
sturdr/dsp/: acquisition.py  discriminator.py  discriminators.py  gnss_signal.py  lock_detector.py  tracking.py
sturdr/nav/: clock.py  ephemeris.py  estimation.py  gps_lnav.py
sturdr/rcvr/: channel_controller.py  logger.py  navigator.py  receiver.py  rf_data_buffer.py
sturdr/sturdr/channel/: channel.hpp  gps-l1ca-channel.cpp  gps-l1ca-channel.hpp
sturdr/sturdr/dsp/: acquisition.cpp  acquisition.hpp  discriminator.cpp  discriminator.hpp  gnss-signal.cpp  gnss-signal.hpp  lock-detectors.cpp  lock-detectors.hpp  tracking.cpp  tracking.hpp
sturdr/sturdr/nav/: atmosphere.cpp  atmosphere.hpp  clock.cpp  clock.hpp  ephemeris.cpp  ephemeris.hpp  estimation.cpp  estimation.hpp  gps-lnav.cpp  gps-lnav.hpp
sturdr/sturdr/utils/: concurrent-barrier.hpp  concurrent-queue.hpp  data-type-adapters.hpp  fftw-wrapper.cpp  fftw-wrapper.hpp  gnss-constants.hpp  io-tools.cpp  io-tools.hpp  structs-enums.hpp
sturdr/tests/: test_acquisition.cpp  test_channel.cpp  test_estimation.cpp  test_io.cpp  test_tracking.cpp
sturdr/utils/: binary_ops.py  constants.py  coordinates.py  enums.py  iotools.py  plots.py  results.py  rf_data_buffer.py  rf_signal_file.py
tests/: acquisition_gps_l1ca.ipynb  channel_gps_l1ca.ipynb  multiprocessing_test.py  parse_data.ipynb  positioning_gps_l1ca.ipynb  signal_test.ipynb  test.py  test_acquisition.cpp  test_beamsteer.cpp  test_channel.cpp  test_estimation.cpp  test_io.cpp  test_thing.cpp  test_tracking.cpp  tracking_gps_l1ca.ipynb
